--- a/blockchain_app/package.json
+++ b/blockchain_app/package.json
@@ -4,7 +4,8 @@
   "description": "A blockchain demo app for creating NFT tokens",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
   "keywords": [
