--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -8,8 +8,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@textile/hub": "^6.1.2",
+    "antd": "^4.16.1",
+    "faker": "^5.5.3",
+    "fuse.js": "^6.4.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
