--- a/frontend_app/package.json
+++ b/frontend_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft_frontend",
+  "name": "lisk_collectible_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
